# oqtopus

./: .gitignore  .pre-commit-config.yaml  .qgis-plugin-ci  404.html  README.md  index.html  objects.inv  oqtopus.py  oqtopus.sh  pyproject.toml  requirements-libs.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy-to-pypi.yml  docs.yml  integration-tests.yml  plugin-package.yml  plugin-test.yml  python-wheel-package.yml
adding_modules/: index.html
docs/: mkdocs.yml
docs/docs/: adding_modules.md  getting_started.md  index.md  installation.md
getting_started/: index.html
oqtopus/: __init__.py  _qgis_shim.py  default_config.conf  default_config.yaml  metadata.txt  oqtopus.py  oqtopus_plugin.py
oqtopus/core/: module.py  module_asset.py  module_operation_task.py  module_package.py  module_version.py  module_version_loader.py  modules_config.py  modules_registry.py  package_prepare_task.py  settings.py
oqtopus/gui/: about_dialog.py  database_access_dialog.py  database_baseline_dialog.py  database_connection_widget.py  database_create_dialog.py  database_dump_dialog.py  database_duplicate_dialog.py  database_restore_dialog.py  file_path_widget.py  install_dialog.py  logs_widget.py  main_dialog.py  message_bar.py  module_selection_widget.py  module_widget.py  parameters_groupbox.py  plugin_widget.py  project_widget.py  recreate_app_dialog.py  roles_create_dialog.py  (+5 more)
scripts/: download-libs.sh  package-pip-packages.sh  screenshots.py
tests/: test_database_duplicate.py  test_imports.py  test_module_widget.py  test_project_patcher.py
(+28 files in other folders)
