[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oqtopus"
version = "0.1.0"
description = "A QGIS module manager"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Damiano Lombardi", email="damiano@opengis.ch" }
]
dependencies = [
  "pyyaml",
  "pgserviceparser>=2.3.0,<3.0.0",
  "pum>=1.1.2,<2.0.0",
  "pydantic>=2.0",
  "psycopg>=3.1.0,<4.0.0",
  "requests>=2.31.0,<3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
