[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[project]
name = "oqtopus"
description = "oQtopus : A QGIS module manager that helps you deploy, manage and upgrade your QGIS projects, plugins and associated postgreSQL / PostGIS data model implementations"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Damiano Lombardi", email="damiano@opengis.ch" }
]
dependencies = [
  "pyyaml",
  "pgserviceparser>=2.3.0,<3.0.0",
  "pum>=1.1.18,<2.0.0",
  "pydantic>=2.0",
  "psycopg>=3.1.0,<4.0.0",
  "requests>=2.31.0,<3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.1"

[tool.setuptools.package-data]
"oqtopus" = ["**/*.ui"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
